# PipelineC

./: .coverage  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  arrays.h  axi.h  axis.h  compiler.h  debug_port.h  deserializer.c  deserializer.h  eth_32.c  fifo.h  fir.c  float_e_m_t.h  ieee_proposed.fixed_float_types.vhdl  ieee_proposed.fixed_pkg.vhdl  ieee_proposed.float_pkg.vhdl  intN_t.h  ip_32.c  main.c  math.h  pipelinec.py  process_delays.py  pyproject.toml  ram.h  ruff.toml  serializer.c  serializer.h  stream.h  test_builds.sh  udp_32.c  udp_32_mac.c  uintN_t.h  wire.h
axi/: axi.h  axi_fsm_style.c  axis.h
buttons/: buttons.c
docs/: PY_TO_LOGIC_DESIGN.md  README.md  pipelinec_to_pypeline.md  pypeline_DESIGN.md  pypeline_guide.md  pypeline_sim_DESIGN.md
dvi/: dvi_pmod.c
examples/: NXSTest.c  NXSTest_syn.c  README.md  adder_tree.c  async_clock_crossing.c  async_wires.c  autopipelined_submodules.c  bit_slicing.c  blink.c  blink_verilator.c  bram.c  c_puzzle  c_puzzle.c  clock_crossing.c  constant_arg_variants.c  cordic.h  counter.c  delay_compare_experiment.c  div_pipeline_experiment.c  edaplay.c  expf.c  find_min_n.c  fir.c  float_math.c  float_mult_add_demo.c  fsm.c  fsm_style.c  global_fifo.c  handshake_io.c  instance_array.c  instance_array_fsms.c  internal_clocks.c  lfsr.c  matrix_mult_high_latency_low_resource.c  matrix_mult_low_latency_high_resource.c  mult_accum_pipeline.c  operator_experiment.c  pipeline.c  pipeline_and_fsm.c  pipeline_feedback_on_self.c  (+13 more)
include/: README.md  arrays.h  bool.h  cdc.h  clock_crossing.h  compiler.h  cordic.h  debug_port.h  fifo.h  global_fifo.h  global_func_inst.h  intN_t.h  mcp.h  multi_host_clk_shared_resource_bus_decl.h  ndarray.h  one_hot.h  shared_resource_bus.h  shared_resource_bus_decl.h  shared_resource_bus_pipeline.h  xstr.h
io/: oddr.h
leds/: led0_3_ports.c  leds_port.c  leds_port_w_out_reg.c
primitives/: cyclone_iv.c  ecp5.c
(+3140 files in other folders)
