[tool.poetry]
name = "pipelinec"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.types.dependencies]
mypy = "^0.971"


[tool.poetry.group.test.dependencies]
hypothesis = "^6.54.4"
pytest = "^7.1.3"
coverage = "^6.4.4"
mutmut = "^2.4.1"


[tool.poetry.group.format.dependencies]
black = "^22.8.0"


[tool.poetry.group.analysis.dependencies]
vulture = "^2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
