[tool.poetry]
name = "pipelinec"
version = "0.1.0"
description = "A C-like hardware description language (HDL) adding high level synthesis(HLS)-like automatic pipelining as a language construct/compiler feature."
authors = ["Julian Kemmerer <julian.v.kemmerer@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = ">=22.12.0"
pytest = ">=7.2.1"
hypothesis = ">=6.65.2"
py-spy = ">=0.3.14"
ruff = ">=0.0.237"
refurb = ">=1.10.0"
pytest-cov = "^4.0.0"
cosmic-ray = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
