[tool.poetry]
name = "pipelinec"
version = "0.1.0"
description = "A C-like hardware description language (HDL) adding high level synthesis(HLS)-like automatic pipelining as a language construct/compiler feature."
authors = ["Julian Kemmerer <julian.v.kemmerer@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pre-commit = "2.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.refurb]
disable_all = true
enable = ["FURB112"]